--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: ironsource_mediation
-description: an ironSource SDK Flutter bridge #TODO:
+description: an ironSource SDK Flutter bridge 
 version: 1.0.0
 homepage: "https://is.com"
+repository: "https://github.com/ironsource-mobile/Flutter-SDK"
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
